--- a/src/components/Home/home.html
+++ b/src/components/Home/home.html
@@ -1,4 +1,12 @@
 <div>
-    <h1>My awesome Vue.js project</h1>
-    <img src="~assets/images/logo.png" alt="">
+    <div class="page-header">
+        <h1>My awesome Vue.js project</h1>
+    </div>
+
+    <div>
+        <img src="~assets/images/logo.png" alt="">
+    </div>
+
+    <a v-link="{ path: '/posts' }">See posts</a>
+
 </div>
