--- a/src/components/Posts/post.html
+++ b/src/components/Posts/post.html
@@ -1,13 +1,9 @@
 <div>
-
-    <a v-link="{ path: '/posts' }">Back to posts</a>
-
     <div class="page-header">
         <h1>{{post.title}}</h1>
     </div>
 
-    <div>
-        {{post.body}}
-    </div>
+    <p>{{post.body}}</p>
 
+    <a v-link="{ path: '/posts' }">&laquo; Back to posts</a>
 </div>
