Use postsreducer on Posts-component

--- a/src/components/Posts/posts.html
+++ b/src/components/Posts/posts.html
@@ -1,4 +1,4 @@
-<div>
+<div class="all-posts" v-if="!!posts.get('allPosts').length">
   <div class="page-header">
     <h1>Posts
       <small class="pull-right"><a v-link="{ path: '/' }">Back to home</a></small>
@@ -7,9 +7,10 @@
 
   <div class="list-group">
     <a class="list-group-item"
-       v-for="post in posts"
-       v-link="{ name: 'post', params: { id: post.id }}">
-      <strong>#{{$index}}</strong> {{post.title}}
+       v-for="post in posts.get('allPosts')"
+       v-link="{ name: 'post', params: { id: post.id }}"
+       v-if="!posts.get('isLoading')">
+      <strong>#{{$index+1}}</strong> {{post.title}}
     </a>
   </div>
 </div>
