Vue 2, huge refactoring

--- a/src/components/Posts/post.html
+++ b/src/components/Posts/post.html
@@ -6,5 +6,5 @@
 
   <p>{{posts.getIn(['post', 'body'])}}</p>
 
-  <a v-link="{ path: '/posts' }">&raquo; Back to posts</a>
+  <router-link to="/posts">&raquo; Back to posts</router-link>
 </div>
