--- a/src/components/Navigation/navigation.html
+++ b/src/components/Navigation/navigation.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-inverse navbar-static-top">
   <div class="navbar-header">
-    <a class="navbar-brand" v-link="{ path: '/', exact: true }">
+    <router-link class="navbar-brand" to="/">
       <img alt="Brand" src="~assets/images/logo.png" height="20">
-    </a>
+    </router-link>
   </div>
   <ul class="nav navbar-nav">
-    <li v-link-active>
-      <a v-link="{ path: '/', exact: true }">Home</a>
-    </li>
-    <li v-link-active>
-      <a v-link="{ path: '/posts' }">Posts</a>
-    </li>
+    <router-link tag="li" to="/">
+      <a>Home</a>
+    </router-link>
+    <router-link tag="li" to="/posts">
+      <a>Posts</a>
+    </router-link>
   </ul>
 </nav>
