--- a/src/style.scss
+++ b/src/style.scss
@@ -1,1 +1,8 @@
-@import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css');
+@import "styles/variables";
+
+// npm depencies
+@import "~bootstrap/scss/bootstrap-flex";
+@import "~font-awesome/scss/font-awesome";
+
+// Project specific
+@import "styles/global";
