--- a/src/components/Posts/post.html
+++ b/src/components/Posts/post.html
@@ -1,9 +1,5 @@
-<div>
-    <div class="page-header">
-        <h1>{{post.title}}</h1>
-    </div>
-
-    <p>{{post.body}}</p>
-
-    <a v-link="{ path: '/posts' }">&laquo; Back to posts</a>
+<div class="card card-block">
+  <h1 class="card-title">{{ post.title }}</h1>
+  <p class="card-text">{{ post.body }}</p>
+  <router-link class="card-link" to="/posts"><i class="fa fa-chevron-left"></i> Back to posts</router-link>
 </div>
