--- a/src/components/Loader/loader.scss
+++ b/src/components/Loader/loader.scss
@@ -3,8 +3,9 @@ $vue-green: #41b883;
 .loader {
   font-size: 10px;
   position: absolute;
-  top: 70px;
-  right: 20px;
+  top: 50%;
+  left: 50%;
+  margin: -20px 0 0 -20px;
   text-indent: -9999em;
   border-top: 5px solid lighten($vue-green, 35%);
   border-right: 5px solid lighten($vue-green, 35%);
@@ -13,8 +14,8 @@ $vue-green: #41b883;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
+  -webkit-animation: loaderSpinner 1.1s infinite linear;
+  animation: loaderSpinner 1.1s infinite linear;
 
   &,
   &:after {
@@ -24,7 +25,7 @@ $vue-green: #41b883;
   }
 }
 
-@-webkit-keyframes load8 {
+@-webkit-keyframes loaderSpinner {
   0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
@@ -35,7 +36,7 @@ $vue-green: #41b883;
   }
 }
 
-@keyframes load8 {
+@keyframes loaderSpinner {
   0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
