Fix navigation for new bootstrap syntax

--- a/src/components/Navigation/navigation.html
+++ b/src/components/Navigation/navigation.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+<nav class="navbar fixed-top navbar-toggleable-sm navbar-inverse bg-inverse">
     <router-link class="navbar-brand" to="/">
       <img alt="Brand" src="~assets/images/logo.png" height="20">
     </router-link>
-  <ul class="nav navbar-nav">
+  <ul class="navbar-nav">
     <router-link class="nav-item" tag="li" to="/" exact>
       <a class="nav-link"><i class="fa fa-home"></i> Home</a>
     </router-link>
