--- a/src/components/Posts/post.html
+++ b/src/components/Posts/post.html
@@ -1,4 +1,4 @@
-<div class="card card-block">
+<div v-if="post.title" class="card card-block">
   <h1 class="card-title">{{ post.title }}</h1>
   <p class="card-text">{{ post.body }}</p>
   <router-link class="card-link" to="/posts"><i class="fa fa-chevron-left"></i> Back to posts</router-link>
