Add createPost component & routes

--- a/src/components/Navigation/navigation.html
+++ b/src/components/Navigation/navigation.html
@@ -9,5 +9,8 @@
     <router-link class="nav-item" tag="li" to="/posts" exact>
       <a class="nav-link"><i class="fa fa-file-text-o"></i> Posts</a>
     </router-link>
+    <router-link class="nav-item" tag="li" to="/posts/create" exact>
+      <a class="nav-link"><i class="fa fa-pencil"></i> Create post</a>
+    </router-link>
   </ul>
 </nav>
