--- a/src/components/Posts/editPost.html
+++ b/src/components/Posts/editPost.html
@@ -1,6 +1,8 @@
-<div v-if="post">
-  <h1 class="card-title">{{ post.title }}</h1>
-  <hr>
+<div>
+  <header v-if="post.title">
+    <h1 class="card-title">{{ post.title }}</h1>
+    <hr>
+  </header>
   <form name="editPostForm" class="card card-block" @submit.prevent="handleSubmit" v-if="post">
 
     <div v-if="message" class="alert" :class="{'alert-success': message.type}" role="alert">
@@ -50,7 +52,7 @@
 
   </form>
   <hr>
-  <router-link :to="{ name: 'post', params: { id }}">
+  <router-link to="/posts">
     <i class="fa fa-chevron-left"></i> Back to posts
   </router-link>
 </div>
