Add a bit spacing below heading

--- a/src/components/Posts/posts.html
+++ b/src/components/Posts/posts.html
@@ -1,4 +1,5 @@
 <div v-if="posts.length">
+<div v-show="posts.length" class="mb-4">
   <h1 class="mb-4"><i class="fa fa-file-text-o"></i> Posts</h1>
 
   <div class="list-group">
