Use fontawesome-fonts from node_module to demonstrate url-resolve-loader

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -80,7 +80,7 @@
 //
 // Variable format should follow the `$component-modifier-state-property` order.
 
-$fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts" !default;
+$fa-font-path: "~font-awesome/fonts";
 
 // Colors
 //
