--- a/src/components/Posts/editPost.html
+++ b/src/components/Posts/editPost.html
@@ -59,7 +59,7 @@
       <div class="form-group row">
         <div class="col-2"></div>
         <div class="col-10">
-          <button type="submit" class="btn btn-primary" :disabled="errors.any() || !fields.dirty()">
+          <button type="submit" class="btn btn-primary" :disabled="errors.any() || !isDirty">
             <i class="fa fa-floppy-o"></i> Save
           </button>
         </div>
